--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1217,8 +1217,19 @@ MEDIA QUERY
 }
 
 @media (max-width: 539.98px) {
+	.hero__h3 {
+		font-size: 1rem;
+	}
+
+	.hero__p {
+		width: 100%;
+		margin: auto;
+		padding-bottom: 2rem;
+		font-size: 0.9rem;
+	}
+
 	.hero__h1 {
-		font-size: 4.8rem;
+		font-size: 4rem;
 	}
 
 	.portfolio__h2--size {
